Closed Bug 925541 Opened 11 years ago Closed 11 years ago

Fix -Wunused-function "unused function 'InRange'" warnings in TypedObject.cpp

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27
Tracking Status
firefox26 --- wontfix
firefox27 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

These unused function warnings are a regression from bug 578700: https://hg.mozilla.org/mozilla-central/rev/2aa4435cd798 js/src/builtin/TypedObject.cpp:332:1 [-Wunused-function] unused function 'InRange' js/src/builtin/TypedObject.cpp:340:1 [-Wunused-function] unused function 'InRange' js/src/builtin/TypedObject.cpp:348:1 [-Wunused-function] unused function 'InRange' js/src/builtin/TypedObject.cpp:356:1 [-Wunused-function] unused function 'InRange' Green try build: https://tbpl.mozilla.org/?tree=Try&rev=255687b3209f
Attachment #815607 - Flags: review?(nmatsakis)
Attachment #815607 - Flags: review?(nmatsakis) → review+
Assignee: nobody → cpeterson
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Please don't resolve bugs until they hit m-c.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → RESOLVED
Closed: 11 years ago11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: