Bug 925541 - Remove TypedObject.cpp's unused InRange() functions. r=nmatsakis